# code-review-agent

./: README.md  index.html  main.py  pyproject.toml
graph/: builder.py  state.py
graph/nodes/: aggregator.py  bug_finder.py  code_quality.py  deep_dive.py  language_detector.py  repo_fetcher.py  report_generator.py  security_analyzer.py
prompts/: bug_finder.txt  quality.txt  security.txt
utils/: github_client.py
